--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 <button id="reset" class="reset">Reset Universe?</button>
 <!-- partial -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"/>
   <script  src="./script.js"></script>
 
 </body>
