--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
   <button class="num" data-num=".">.</button>
   <button id="equals" class="equals" data-result="">=</button>
   <button data-ops="divided by" class="ops">/</button>
+  <center><button class="num" data-num=".">NUEVO</button></center>
 </div>
 
 <button id="reset" class="reset">Reset Universe?</button>
+
 <!-- partial -->
 
   <script  src="./script.js"></script>
